mi segundo  repo con tailwindCss

--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
+    <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
     <title>Tailwind - install</title>
 </head>
 <body>
-    
-    <div class="bg-fucsiaCool min-h-96">
-        <div class="min-h-60 align-baseline">
-            <h1 class="text-3xl text-center text-slate-300 ">
-                Hello world!
-            </h1>
+    <main class="bg-gradient-to-b from-fucsiaCool to-purple-600 m-0 p-0 box-border h-screen ">
+                <div class="flex justify-center">
+                    <span class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center mt-10">
+                        Hello world!
+                    </span>
+                </div>
+                <h2 class="text- 2xl text-center text-slate-300 mt-10">
+                    Esta es mi página para practicar y aprender!
+                </h2>
+                <a  href="https://tailwindcss.com/"class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2" href="https://tailwindcss.com/" target="blank">
+                    TAILWIND.CSS 3.4.10
+                </a>
+            </div>
+            <div class="pb-4 flex justify-center">
+                <h2 class="text-6xl text-center text-slate-300 mt-10">
+                    MEDIDAS EN TAILWIND CSS
+                </h2>
+            </div>
         </div>
-        
-    </div>
+    </main>
 </body>
 </html>
