--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,23 @@
     <title>Tailwind - install</title>
 </head>
 <body>
-    <main class="bg-gradient-to-b from-fucsiaCool to-purple-600 m-0 p-0 box-border h-screen ">
-                <div class="flex justify-center">
-                    <span class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center mt-10">
-                        Hello world!
-                    </span>
-                </div>
-                <h2 class="text- 2xl text-center text-slate-300 mt-10">
-                    Esta es mi página para practicar y aprender!
-                </h2>
-                <a  href="https://tailwindcss.com/"class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2" href="https://tailwindcss.com/" target="blank">
-                    TAILWIND.CSS 3.4.10
-                </a>
-            </div>
-            <div class="pb-4 flex justify-center">
-                <h2 class="text-6xl text-center text-slate-300 mt-10">
-                    MEDIDAS EN TAILWIND CSS
-                </h2>
-            </div>
+    <main class="h-screen bg-gradient-to-b from-fucsiaCool to-purple-600 m-0 p-0">
+        <div class="flex justify-center">
+            <span class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center mt-10">
+                Hello world!
+            </span>
         </div>
+        <h2 class="text- 2xl text-center text-slate-300 mt-10">
+            Esta es mi página para practicar y aprender!
+        </h2>
+        <a  href="https://tailwindcss.com/"class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2" href="https://tailwindcss.com/" target="blank">
+            TAILWIND.CSS 3.4.10
+        </a>
+        <div class="pb-4 flex justify-center ">
+            <a href="./pages/contacto.html" target="_blank" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
+                CONTACTO
+            </a>
+        </div>            
     </main>
 </body>
 </html>
