mi quinto  repo con tailwindCss

--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -31,10 +31,9 @@
         </p>
     </div>
 
-    <div class="pb-4 flex justify-center">
-        
+    <div class="pb-4 flex justify-center">        
         <div>
-            <p class="text-center text-4xl mt-20 mb-10">N°1( after, hover, focus, file, marker, selection, first-line, firts-letter )</p>
+            <p class="text-center text-3xl mt-20 mx-auto mb-10 p-2">N°1( after, hover, focus, file, marker, selection, first-line, firts-letter )</p>
             <div class="rounded-md bg-white p-10 w-125 mx-auto">
                 <div>
                     <button href="#" class="
