--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,15 @@
             TAILWIND.CSS 3.4.10
         </a>
         <div class="pb-4 flex justify-center ">
-            <a href="./pages/contacto.html" target="_blank" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
+            <a href="./pages/contacto.html" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
                 CONTACTO
             </a>
-        </div>            
+        </div>      
+        <div class="pb-4 flex justify-center ">
+            <a href="./pages/responsive.html" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
+                RESPONSIVE DESIGN
+            </a>
+        </div>          
     </main>
 </body>
 </html>
