--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -21,12 +21,12 @@
         hover:bg-slate-600 
         border-slate-600 border-2"
         href="../index.html">
-            🔙
+            ←
     </a>
                 
     <div>
-        <p class="text-center text-4xl mb-4">
-            EJEMPLOS DE PSEUDOCLASES CON FORMULARIOS
+        <p class="text-center text-5xl mb-4">
+            EJEMPLOS DE PSEUDOCLASES
         </p>
     </div>
 
