responsive design con tailwindCss

--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -28,15 +28,33 @@
     </p>
 
 
-    <div class="border-2 border-black p-6 mx-auto mb-10 flex justify-center
-    smartphone:w-60 sm:w-80 md:w-100 lg:w-125">
+    <section class="smartphone:mb-20">
+        <div class="border-2 border-black p-6 mx-auto mt-10 mb-10 smartphone:w-60 sm:w-80 md:w-125 lg:w-150">
 
-       <h2 class="text-xl font-bold sm:w-72 md:w-96 lg:w-100 items-center"> Aprendiendo responsive con TailwindCss</h2>
+            <h2 class="text-xl font-bold sm:w-72 md:w-96 lg:w-100">
+                Aprendiendo responsive con TailwindCss
+            </h2>
 
-       <p class="sm:w-72 md:w-96 lg:w-100 items-center">
-        En este apartado de esta página vamos a ver la parte responsive con tailwindcss
-       </p>
-
+            <p class="sm:w-72 md:w-96 lg:w-100">
+                En este apartado de esta página vamos a ver la parte responsive con tailwindcss
+            </p>
+        </div>
+    </section>
+    <div class="
+                flex 
+                place-content-center 
+                items-center
+                flex-wrap
+                gap-4
+                h-[600px]
+                sm:h-[300px]
+                lg:h-[150px]
+                m-10
+                mt-0">
+        <div class="card grow">1</div>
+        <div class="card grow">2</div>
+        <div class="card grow">3</div>
+        <div class="card grow">4</div>
     </div>
 </body>
 </html>
