--- a/src/index.html
+++ b/src/index.html
@@ -7,24 +7,32 @@
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
     <title>Tailwind - install</title>
 </head>
-<body>
-    <main class="h-screen bg-gradient-to-b from-fucsiaCool to-purple-600 m-0 p-0">
-        <div class="flex justify-center">
-            <span class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center mt-10">
+<body class="m-0 p-0 bg-gradient-to-b from-fucsiaCool via-purple-800 to-purple-600 ">
+    <main class="h-full ">
+        <div class="flex justify-center mb-5">
+            <span class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center text-5xl mt-10">
                 Hello world!
             </span>
         </div>
-        <h2 class="text- 2xl text-center text-slate-300 mt-10">
-            Esta es mi página para practicar y aprender!
-        </h2>
-        <a  href="https://tailwindcss.com/"class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2" href="https://tailwindcss.com/" target="blank">
-            TAILWIND.CSS 3.4.10
-        </a>
-        <div class="pb-4 flex justify-center ">
+        <div class="flex 
+        place-content-center 
+        items-center
+        flex-wrap
+        gap-4">
+            <h2 class="text- 2xl  w-40 flex items-center font-bold">
+                Esta es mi página para practicar y aprender!
+            </h2>
+            <div class="bg-[url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU')] bg-cover bg-center p-3 rounded-full w-40 h-40 flex items-center cursor-pointer brightness-100 contrast-100">
+                <a  href="https://tailwindcss.com/"class="text- 2xl text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black" href="https://tailwindcss.com/" target="blank">
+                    TAILWIND.CSS 3.4.10
+                </a>
+            </div>
+        </div>
+        <div class=" mt-10 pb-4 flex justify-center">
             <a href="./pages/contacto.html" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
                 CONTACTO
             </a>
-        </div>      
+        </div>    
         <div class="pb-4 flex justify-center ">
             <a href="./pages/responsive.html" class="text- 5xl text-center text-slate-300 my-8 bg-slate-500 p-3 rounded-md w-48 mx-auto block hover:bg-slate-600 border-slate-600 border-2">
                 RESPONSIVE DESIGN
