--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../output.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
     <title>RESPONSIVE - Tailwind</title>
 </head>
@@ -21,7 +22,7 @@
         hover:bg-slate-600 
         border-slate-600 border-2"
         href="../index.html">
-            ←
+            <i class="fa-solid fa-arrow-left"></i>
     </a>
     <p class="W-80 text-center sm:text-3xl md:text-5xl lg:text-6xl mb-4 mt-4">
         Responsive Design
