responsive design con tailwindCss

--- a/src/index.html
+++ b/src/index.html
@@ -39,5 +39,23 @@
             </a>
         </div>          
     </main>
+    <footer>
+        <div class="text-center text-slate-300">
+            <p class="proy3">© 2024 ESTUDIO/3</p>
+            <p class="proy4">Todos los derechos reservados.</p>
+            <ul class="iconos-ul">
+                <li class="iconos-li">
+                  <a href="#" class="iconos-a">
+                    <i class="fab fa-facebook-f icon"></i>    </a>
+                </li>
+                <li class="iconos-li">
+                  <a href="#"  class="iconos-a"><i class="fab fa-instagram icon"></i></a>
+                </li>
+                <li class="iconos-li">
+                  <a href="#"  class="iconos-a"><i class="fab fa-linkedin-in icon"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
