--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -182,6 +182,26 @@
             </div>            
         </div>
     </div>
+    <footer>
+        <div class="text-center bg-purple-600 py-10">
+            <p class="text-slate-300">© 2024 TAILWINDCSS PRATICE</p>
+            <p class="text-slate-300">Todos los derechos reservados.</p>
+            <ul class="flex justify-center flex-wrap gap-5 pt-2 text-white">
+                <li class="w-10 h-10 flex justify-center items-center bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
+                  <a href="https://www.facebook.com/colo.soad.3/" target="_blank" class="iconos-a">
+                    <i class="fab fa-facebook-f icon p-2"></i>    </a>
+                </li>
+                <li class="w-10 h-10 flex justify-center items-center bg-white shadow-xl text-3xl mx-9 rounded-lg text-insta">
+                    <a href="https://www.instagram.com/colosoad/" target="_blank" class="iconos-a">
+                    <i class="fab fa-instagram icon p-2"></i>
+                    </a>
+                </li>
+                <li class="w-10 h-10 flex justify-center items-center bg-linkaBg shadow-xl text-3xl rounded-lg text-linka">
+                  <a href="#"><i class="fab fa-linkedin-in icon p-2"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     
 </body>
 </html>
