--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
     <title>Tailwind - install</title>
 </head>
@@ -19,11 +20,11 @@
         items-center
         flex-wrap
         gap-4">
-            <h2 class="text- 2xl  w-40 flex items-center font-bold">
+            <h2 class="text- 3xl  w-40 flex items-center font-bold">
                 Esta es mi página para practicar y aprender!
             </h2>
             <div class="bg-[url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU')] bg-cover bg-center p-3 rounded-full w-40 h-40 flex items-center cursor-pointer brightness-100 contrast-100">
-                <a  href="https://tailwindcss.com/"class="text- 2xl text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black" href="https://tailwindcss.com/" target="blank">
+                <a class="text- 3xl text-center bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-black" href="https://tailwindcss.com/" target="blank">
                     TAILWIND.CSS 3.4.10
                 </a>
             </div>
@@ -40,19 +41,21 @@
         </div>          
     </main>
     <footer>
-        <div class="text-center text-slate-300">
-            <p class="proy3">© 2024 ESTUDIO/3</p>
-            <p class="proy4">Todos los derechos reservados.</p>
-            <ul class="iconos-ul">
-                <li class="iconos-li">
-                  <a href="#" class="iconos-a">
-                    <i class="fab fa-facebook-f icon"></i>    </a>
+        <div class="text-center bg-purple-600 py-10">
+            <p class="text-slate-300">© 2024 TAILWINDCSS PRATICE</p>
+            <p class="text-slate-300">Todos los derechos reservados.</p>
+            <ul class="flex justify-center flex-wrap gap-5 pt-2 text-white">
+                <li class="w-10 h-10 flex justify-center items-center bg-slate-200 shadow-xl text-3xl text-azulFb rounded-lg">
+                  <a href="https://www.facebook.com/colo.soad.3/" target="_blank" class="iconos-a">
+                    <i class="fab fa-facebook-f icon p-2"></i>    </a>
                 </li>
-                <li class="iconos-li">
-                  <a href="#"  class="iconos-a"><i class="fab fa-instagram icon"></i></a>
+                <li class="w-10 h-10 flex justify-center items-center bg-white shadow-xl text-3xl mx-9 rounded-lg text-insta">
+                    <a href="https://www.instagram.com/colosoad/" target="_blank" class="iconos-a">
+                    <i class="fab fa-instagram icon p-2"></i>
+                    </a>
                 </li>
-                <li class="iconos-li">
-                  <a href="#"  class="iconos-a"><i class="fab fa-linkedin-in icon"></i></a>
+                <li class="w-10 h-10 flex justify-center items-center bg-linkaBg shadow-xl text-3xl rounded-lg text-linka">
+                  <a href="#"><i class="fab fa-linkedin-in icon p-2"></i></a>
                 </li>
             </ul>
         </div>
