--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
     <title>Tailwind - install</title>
 </head>
-<body class="bg-no-repeat h-screen m-0 p-0 bg-gradient-to-b from-fucsiaCool via-purple-800 to-purple-600">
+<body class="bg-no-repeat h-full m-0 p-0 bg-gradient-to-b from-fucsiaCool via-purple-800 to-purple-600">
     <main class="h-full ">
         <div class="flex justify-center mb-5">
             <span class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500 text-center text-5xl mt-10">
@@ -41,7 +41,7 @@
         </div>          
     </main>
     <footer>
-        <div class="text-center bg-purple-600 py-10">
+        <div class="text-center py-10">
             <p class="text-slate-300">© 2024 TAILWINDCSS PRATICE</p>
             <p class="text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 text-white">
