--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -10,17 +10,19 @@
 </head>
 <body class="smartphone:bg-fucsiaCool sm:bg-pink-950 md:bg-violet-950 lg:bg-slate-600 ">
     <a class="
-        m-8
-        flex
-        justify-center
-        items-center
-        text-3xl
+        fixed
+        left-4
+        top-4
+        text-center
+        leading-10
+        text-2xl
         rounded-full 
         bg-pink-700
-        w-16
-        h-16
+        w-10
+        h-10
         hover:bg-slate-600 
-        border-slate-600 border-2"
+        border-slate-600 border-2
+        "
         href="../index.html">
             <i class="fa-solid fa-arrow-left"></i>
     </a>
