--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -26,12 +26,10 @@
         href="../index.html">
             <i class="fa-solid fa-arrow-left"></i>
     </a> 
-    <header>
-        <div class="p-3 smartphone:mt-20 smartphoneRotate:mt-20 w-80">
-            <p class="text-center smartphone:text-2xl smartphoneRotate:text-5xl">
-                EJEMPLOS DE PSEUDOCLASES
-            </p>
-        </div>
+    <header class="p-3 smartphone:mt-20 smartphoneRotate:mt-20">
+        <p class="text-center smartphone:text-2xl smartphoneRotate:text-5xl">
+            EJEMPLOS DE PSEUDOCLASES
+        </p>
     </header>                   
     <main class="flex justify-center items-center flex-col">    
         <p class="text-center text-3xl mt-20 mx-auto mb-10 w-80">N°1( after, hover, focus, file, marker, selection, first-line, firts-letter )</p>
@@ -77,7 +75,8 @@
                         file:rounded-lg
                         file:text-slate-300
                         file:font-semibold 
-                        file:px-4
+                        file:px-2
+                        pl-2
                         hover:file:bg-pink-600
                         my-4
                         justify-center"
