--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -26,12 +26,10 @@
         href="../index.html">
             <i class="fa-solid fa-arrow-left"></i>
     </a>
-    <p class="W-80 text-center sm:text-3xl md:text-5xl lg:text-6xl mb-4 mt-4">
+    <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
         Responsive Design
     </p>
-
-
-    <section class="smartphone:mb-20">
+    <section class="smartphone:mb-40">
         <div class="border-2 border-black p-6 mx-auto mt-10 mb-10 smartphone:w-60 sm:w-80 md:w-125 lg:w-150">
 
             <h2 class="text-xl font-bold sm:w-72 md:w-96 lg:w-100">
@@ -61,7 +59,7 @@
         <div class="card grow">4</div>
     </div>
     <footer>
-        <div class="text-center bg-fucsiaCool py-10">
+        <div class="text-center py-10">
             <p class="text-slate-300">© 2024 TAILWINDCSS PRATICE</p>
             <p class="text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 text-white">
