--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -47,7 +47,7 @@
                 items-center
                 flex-wrap
                 gap-4
-                h-[600px]
+                h-150
                 sm:h-[300px]
                 lg:h-[150px]
                 m-10
@@ -57,6 +57,14 @@
         <div class="card grow">2</div>
         <div class="card grow">3</div>
         <div class="card grow">4</div>
+    </div>
+    <p class="text-center text-3xl py-10">
+        Utilizando la clase "basis"
+    </p>
+    <div class="flex gap-4 flex-wrap justify-center items-center">
+        <div class="card basis-1/4">1</div>
+        <div class="card basis-1/4">2</div>
+        <div class="card basis-1/2">3</div>
     </div>
     <footer>
         <div class="text-center py-10">
