--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -58,13 +58,42 @@
         <div class="card grow">3</div>
         <div class="card grow">4</div>
     </div>
-    <p class="text-center text-3xl py-10">
-        Utilizando la clase "basis"
+    <p class="text-center text-3xl pt-10 pb-5 px-5">
+        Medianera utilizando la clase "basis"
     </p>
-    <div class="flex gap-4 flex-wrap justify-center items-center">
-        <div class="card basis-1/4">1</div>
-        <div class="card basis-1/4">2</div>
-        <div class="card basis-1/2">3</div>
+    <div class="flex gap-1 flex-wrap justify-center items-center bg-cemento m-2 py-5 rounded-lg border-2 border-black sm:w-1/2 sm:mx-auto lg:w-1/4">
+        <div class="bricks basis-1/2 "></div>
+        <div class="bricks basis-1/3"></div>
+        <div class="bricks basis-1/3"></div>
+        <div class="bricks basis-1/2"></div>
+        <div class="bricks basis-1/2"></div>
+        <div class="bricks basis-1/3"></div>
+        <div class="bricks basis-1/2"></div>
+        <div class="bricks basis-1/3"></div>
+        <div class="bricks basis-1/3 "></div>
+        <div class="bricks basis-1/2"></div>
+        <div class="bricks basis-1/2"></div>
+        <div class="bricks basis-1/3 "></div>
+    </div>
+
+    <p class="text-center text-3xl pt-10 pb-5 px-5">
+        Collage
+    </p>
+    
+    <div class="flex gap-1 flex-wrap justify-center items-center bg-gray-300 mx-6 py-5 rounded-lg border-2 border-white ">
+        <div class="collage basis-1/3 bg-[url('https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        
+        <div class="collage basis-1/2 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage basis-1/4 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683032.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage basis-1/4 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683012.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage basis-1/3 bg-[url('https://img.freepik.com/foto-gratis/hermoso-paisaje-lago_23-2150725023.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage basis-1/3 bg-[url('https://img.freepik.com/foto-gratis/paisaje-natural-vista-playa_23-2151682967.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage basis-1/2 bg-[url('https://img.freepik.com/foto-gratis/morskie-oko-tatry_1204-510.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage w-full mx-7 bg-[url('https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825175.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage basis-1/2 bg-[url('https://img.freepik.com/foto-gratis/paisaje-montana-lago_71767-126.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage basis-1/3 bg-[url('https://img.freepik.com/foto-gratis/paisaje-natural-cielo-despejado-estrellado_23-2151683117.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage mx-7 w-full bg-[url('https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825097.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
+        <div class="collage w-full mx-7 h-[120px] bg-[url('https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></div>
     </div>
     <footer>
         <div class="text-center py-10">
