Responsive collage con GRID

--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -127,33 +127,33 @@
     <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
         Collage
     </p>
-    <div class="grid grid-cols-3 gap-2 mx-6 py-6 h-[100vh]">
+    <div class="grid grid-cols-3 gap-2 mx-6 py-6 px-6 rounded-lg h-[100vh] smartphoneRotate:grid-cols-6 smartphoneRotate:gap-1 smartphoneRotate:h-[1500px] bg-slate-300">
         
-        <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 col-span-2 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683032.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683032.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683012.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2  bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683012.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/hermoso-paisaje-lago_23-2150725023.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 col-span-2 bg-[url('https://img.freepik.com/foto-gratis/hermoso-paisaje-lago_23-2150725023.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 bg-[url('https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/paisaje-natural-vista-playa_23-2151682967.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 bg-[url('https://img.freepik.com/foto-gratis/paisaje-natural-vista-playa_23-2151682967.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/morskie-oko-tatry_1204-510.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 bg-[url('https://img.freepik.com/foto-gratis/morskie-oko-tatry_1204-510.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 col-span-2 bg-[url('https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825175.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2  bg-[url('https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825175.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/paisaje-montana-lago_71767-126.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 bg-[url('https://img.freepik.com/foto-gratis/paisaje-montana-lago_71767-126.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-
-        <a href="https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825097.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2  col-span-2 bg-[url('https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825097.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]">
+        <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 col-span-2 smartphoneRotate:row-span-3 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 1 -->
+        <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683032.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 smartphoneRotate:row-span-2 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683032.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 2 -->
+        <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683012.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 smartphoneRotate:row-span-2 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683012.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 3 -->
+        <a href="https://img.freepik.com/foto-gratis/hermoso-paisaje-lago_23-2150725023.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 col-span-2  smartphoneRotate:row-span-3 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/hermoso-paisaje-lago_23-2150725023.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 4 -->
+        <a href="https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 smartphoneRotate:row-span-2 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/vista-montana-estetica-ensueno_23-2151700272.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 5 -->
+        <a href="https://img.freepik.com/foto-gratis/paisaje-natural-vista-playa_23-2151682967.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 smartphoneRotate:row-span-2 smartphoneRotate:col-span-2 bg-[url('https://img.freepik.com/foto-gratis/paisaje-natural-vista-playa_23-2151682967.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 6 -->
+        <a href="https://img.freepik.com/foto-gratis/morskie-oko-tatry_1204-510.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 smartphoneRotate:row-span-2 smartphoneRotate:col-span-2 bg-[url('https://img.freepik.com/foto-gratis/morskie-oko-tatry_1204-510.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 7 -->
+        <a href="https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 col-span-2 smartphoneRotate:row-span-2 smartphoneRotate:col-span-2 bg-[url('https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 8 -->
+        <a href="https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825175.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 smartphoneRotate:row-span-1 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825175.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 9 -->
+        <a href="https://img.freepik.com/foto-gratis/paisaje-montana-lago_71767-126.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 smartphoneRotate:row-span-4 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/paisaje-montana-lago_71767-126.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 10 -->
+        <a href="https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825097.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2  col-span-2 smartphoneRotate:row-span-3 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/vista-forma-corazon-montanas-paisaje-lago_23-2150825097.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]">
         </a>
-
-        <a href="https://img.freepik.com/foto-gratis/paisaje-natural-cielo-despejado-estrellado_23-2151683117.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 col-span-3 bg-[url('https://img.freepik.com/foto-gratis/paisaje-natural-cielo-despejado-estrellado_23-2151683117.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
-        
+        <!-- 11 -->
+        <a href="https://img.freepik.com/foto-gratis/paisaje-natural-cielo-despejado-estrellado_23-2151683117.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 col-span-3 smartphoneRotate:col-span-6 smartphoneRotate:row-span-3 bg-[url('https://img.freepik.com/foto-gratis/paisaje-natural-cielo-despejado-estrellado_23-2151683117.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
+        <!-- 12 -->
     </div>
     <footer>
         <div class="text-center py-10">
