--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
     <title>Tailwind - CONTACTO</title>
 </head>
-<body class="bg-purple-600 h-screen box-border">
+<body class="bg-gradient-to-b from-fucsiaCool via-purple-800 to-purple-600">
     <a class="
         fixed
         left-4
