--- a/src/pages/responsive.html
+++ b/src/pages/responsive.html
@@ -83,7 +83,7 @@
         Collage
     </p>
 
-    <div class="flex gap-1 md:gap-2 lg:gap-3 flex-wrap justify-center items-center bg-gray-300 mx-6 py-6 rounded-lg border-2 border-white ">
+    <div class="flex gap-1 md:gap-2 lg:gap-3 flex-wrap justify-center lg:w-[900px] lg:mx-auto items-center bg-gray-300 mx-6 py-6 rounded-lg border-2 border-white ">
         <a href="https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage basis-1/2 bg-[url('https://img.freepik.com/foto-gratis/arco-iris-al-final-paisaje-carretera_23-2151596720.jpg?size=626&ext=jpg&ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
         <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage basis-1/3 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
         <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683032.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage basis-1/3 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151683032.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
@@ -101,7 +101,7 @@
     <p class="W-80 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
         Grid
     </p>
-    <div class="grid grid-cols-4 gap-2 mx-6">
+    <div class="grid grid-cols-4 gap-2 mx-6 lg:w-[900px] lg:mx-auto">
         <div class="card2 col-span-3">1</div>
         <div class="card2">2</div>
         <div class="card2 col-span-2 row-span-2">3</div>
@@ -116,7 +116,7 @@
     <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
         Maquetado de html con grid
     </p>
-    <div class="grid grid-cols-2 gap-2 mx-6 py-6 h-[100vh]">
+    <div class="grid grid-cols-2 gap-2 mx-6 py-6 h-[100vh] lg:w-[900px] lg:mx-auto">
         <div class="card2 col-span-2">Header</div>
         <div class="card2 col-span-2">Nav</div>
         <div class="card2">Section</div>
@@ -127,7 +127,7 @@
     <p class="W-80 mx-6 text-center smartphone:text-3xl smartphone:my-20 md:text-5xl ">
         Collage
     </p>
-    <div class="grid grid-cols-3 gap-2 mx-6 py-6 px-6 rounded-lg h-[100vh] smartphoneRotate:grid-cols-6 smartphoneRotate:gap-1 smartphoneRotate:h-[1500px] bg-slate-300">
+    <div class="grid grid-cols-3 gap-1 mx-6 py-6 px-6 rounded-lg h-[100vh] smartphoneRotate:grid-cols-6 smartphoneRotate:h-[1500px] bg-slate-300 lg:w-[900px] lg:mx-auto">
         
         <a href="https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid" target="_blank" class="collage2 row-span-2 col-span-2 smartphoneRotate:row-span-3 smartphoneRotate:col-span-3 bg-[url('https://img.freepik.com/foto-gratis/vista-impresionante-paisaje-natural-playa_23-2151682871.jpg?ga=GA1.1.1244375472.1717090889&semt=ais_hybrid')]"></a>
         <!-- 1 -->
