Agrego js con DarkMode

--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -34,53 +34,9 @@
     <main class="flex justify-center items-center flex-col">    
         <p class="text-center text-3xl mt-20 mx-auto mb-10 w-80">N°1( after, hover, focus, file, marker, selection, first-line, firts-letter )</p>
         <div class="w-80 bg-slate-100 rounded-lg flex items-center justify-center flex-wrap">
-            <button href="#" class="
-                        after:content-['']
-                        after:absolute 
-                        after:left-32
-                        relative
-                        after:border-8
-                        after:border-transparent
-                        after:top-3                        after:border-l-pink-800 
-                        hover:after:border-l-pink-600
-                        text-slate-300 
-                        my-4 
-                        bg-pink-800
-                        p-2
-                        rounded-md 
-                        w-32 
-                        hover:bg-pink-600 ">
-                           Click Aquí!
-                    </button>
-                    <input class="
-                        w-32
-                        border 
-                        ml-2 
-                        px-2 
-                        placeholder:text-pink-800 
-                        placeholder:italic 
-                        focus:outline-none 
-                        focus:ring-4
-                        focus:ring-pink-800
-                        focus:ring-opacity-50 
-                        border-pink-800
-                        
-                        " 
-                        type="text" 
-                        placeholder="Nombre"
-                    >
-                    <input type="file" class="
-                        file:bg-pink-800
-                        file:border-0
-                        file:rounded-lg
-                        file:text-slate-300
-                        file:font-semibold 
-                        file:px-2
-                        pl-2
-                        hover:file:bg-pink-600
-                        my-4
-                        justify-center"
-                        >
+            <button href="#" class="after:content-[''] after:absolute after:left-32 relative after:border-8 after:border-transparent after:top-3 after:border-l-pink-800 hover:after:border-l-pink-600 text-slate-300 my-4 bg-pink-800 p-2 rounded-md w-32 hover:bg-pink-600 ">Click Aquí!</button>
+            <input class="w-32 border ml-2 px-2 placeholder:text-pink-800 placeholder:italic focus:outline-none focus:ring-4 focus:ring-pink-800 focus:ring-opacity-50 border-pink-800" type="text" placeholder="Nombre">
+            <input type="file" class="file:bg-pink-800 file:border-0 file:rounded-lg file:text-slate-300 file:font-semibold file:px-2 pl-5 hover:file:bg-pink-600 my-4 justify-center">
         </div>
         <div class="w-80 bg-slate-100 rounded-lg flex items-center justify-center flex-wrap m-3 p-3">
             <ol class="
@@ -180,7 +136,7 @@
         </div>
     </main>
     <footer>
-        <div class="text-center bg-purple-600 py-10">
+        <div class="text-center py-10">
             <p class="text-slate-300">© 2024 TAILWINDCSS PRATICE</p>
             <p class="text-slate-300">Todos los derechos reservados.</p>
             <ul class="flex justify-center flex-wrap gap-5 pt-2 text-white">
