Agregando funcionalidad con ls y darkmode

--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -6,9 +6,10 @@
     <link href="../output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="icono" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeKPw4CK4jcH7udsFHZdiB3iIOuI3fUCsxUZosXy4Y1yd25NA-dzCBPrSDIhg1BwObl3w&usqp=CAU" />
+    <script defer src="../js/contacto.js"></script>
     <title>Tailwind - CONTACTO</title>
 </head>
-<body class="bg-gradient-to-b from-fucsiaCool via-purple-800 to-purple-600">
+<body class="bg-fucsiaCool dark:bg-black">
     <a class="
         fixed
         left-4
@@ -33,10 +34,10 @@
     </header>                   
     <main class="flex justify-center items-center flex-col">    
         <p class="text-center text-3xl mt-20 mx-auto mb-10 w-80">N°1( after, hover, focus, file, marker, selection, first-line, firts-letter )</p>
-        <div class="w-80 bg-slate-100 rounded-lg flex items-center justify-center flex-wrap">
+        <div class="w-80 bg-slate-100 rounded-lg flex items-center justify-center flex-wrap dark:bg-black">
             <button href="#" class="after:content-[''] after:absolute after:left-32 relative after:border-8 after:border-transparent after:top-3 after:border-l-pink-800 hover:after:border-l-pink-600 text-slate-300 my-4 bg-pink-800 p-2 rounded-md w-32 hover:bg-pink-600 ">Click Aquí!</button>
-            <input class="w-32 border ml-2 px-2 placeholder:text-pink-800 placeholder:italic focus:outline-none focus:ring-4 focus:ring-pink-800 focus:ring-opacity-50 border-pink-800" type="text" placeholder="Nombre">
-            <input type="file" class="file:bg-pink-800 file:border-0 file:rounded-lg file:text-slate-300 file:font-semibold file:px-2 pl-5 hover:file:bg-pink-600 my-4 justify-center">
+            <input class="w-32 border ml-2 px-2 placeholder:text-pink-800 placeholder:italic focus:outline-none focus:ring-4 focus:ring-pink-800 focus:ring-opacity-50 border-pink-800 dark:bg-black" type="text" placeholder="Nombre">
+            <input type="file" class="file:bg-pink-800 file:border-0 file:rounded-lg file:text-slate-300 file:font-semibold file:px-2 pl-7 hover:file:bg-pink-600 my-4 justify-center">
         </div>
         <div class="w-80 bg-slate-100 rounded-lg flex items-center justify-center flex-wrap m-3 p-3">
             <ol class="
