Agregando funcionalidad con ls y darkmode

--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -116,18 +116,7 @@
                     </p>
     
                 <input 
-                    class="
-                    disabled:bg-red-200 
-                    border 
-                    border-gray-300 
-                    w-full 
-                    px-3 
-                    py-2 
-                    mt-4
-                    mb-4 
-                    rounded-md
-                    " 
-                    type="password" placeholder="Contraseña" disabled>
+                    class="disabled:bg-red-200 border border-gray-300 w-full px-3 py-2 mt-4 mb-4 rounded-md " type="password" placeholder="Contraseña" disabled>
                 </input>
     
                 <input 
